--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,9 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	position: relative;
 	z-index: 2;
 }
+
+.page__practice {
+}
 /* ====================================Header-block==================================== */
 
 .header-block {
@@ -177,6 +180,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	margin-bottom: 10px;
 }
 .header-block__sub-title {
+	color: #737373;
 	line-height: calc(20 / 14 * 100%);
 }
 
@@ -437,7 +441,7 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	}
 }
 
-@media (max-width: 531px) {
+@media (max-width: 574px) {
 	.advantages__column {
 		padding: 0 15px;
 		flex: 0 1 100%;
@@ -471,6 +475,93 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	font-weight: 700;
 	line-height: calc(24 / 16 * 100%);
 	color: #737373;
+}
+
+/* ====================================Page-practice==================================== */
+
+.practice {
+	padding: 125px 0 80px 0;
+}
+.practice__container {
+}
+.practice__header {
+	margin-bottom: 45px;
+}
+
+.practice__body {
+	display: flex;
+	margin: 0 -15px;
+	flex-wrap: wrap;
+}
+.practice__column {
+	padding: 0 15px;
+	flex: 0 1 25%;
+}
+
+@media (max-width: 1031px) {
+	.practice__column {
+		padding: 0 15px;
+		flex: 0 1 50%;
+	}
+	.practice__column:nth-child(-n+2) {
+		margin-bottom: 30px;
+	}
+	.practice__header {
+		margin-bottom: 25px;
+	}
+	.practice {
+		padding: 60px 0 40px;
+	}
+}
+
+@media (max-width: 574px) {
+	.practice__column {
+		padding: 0 15px;
+		flex: 0 1 100%;
+		margin-bottom: 15px;
+		text-align: center;
+	}
+	.practice {
+		padding: 40px 0 30px;
+	}
+}
+
+.practice__item {
+	
+}
+.item-practice {
+	background-color: white;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+}
+.item-practice__content {
+	padding: 30px;
+	flex: 1 1 auto;
+}
+.item-practice__link {
+	display: inline-block;
+}
+.item-practice__link:hover {
+	text-decoration: underline;
+}
+.item-practice__link:not(:last-child) {
+	margin-bottom: 15px;
+}
+.item-practice__title {
+	color: #252B42;
+	font-size: 16px;
+	line-height: calc(24 / 16 * 100%);
+	font-weight: 700;
+	letter-spacing: 0.1px;
+}
+.item-practice__text {
+	color: #737373;
+	line-height: calc(20 / 14 * 100%);
+}
+.item-practice__image {
+	display: block;
+	padding-bottom: 60%;
 }
 
 /* ====================================Footer==================================== */
