--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,9 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 
 .page__practice {
 }
+
+.page__whoweare {
+}
 /* ====================================Header-block==================================== */
 
 .header-block {
@@ -200,21 +203,11 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	max-width: 400px;
 }
 
-@media (max-width: 992px) {
-	.main-block__body {
-		padding: 120px 0 191px 0;
-	}
-}
-
 .main-block__body > *:not(:last-child){
 	margin-bottom: 35px;
 }
 
-@media (max-width: 574px) {
-	.main-block__body > *:not(:last-child){
-		margin-bottom: 55px;
-	}
-}
+
 
 .main-block__title {
 	font-size: 58px;
@@ -223,23 +216,11 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	letter-spacing: 0.2px;
 }
 
-@media (max-width: 479px) {
-	.main-block__title {
-		font-size: 42px;
-	}
-}
-
 .main-block__text {
 	color: #737373;
 	letter-spacing: 0.2px;
 	font-size: 20px;
 	line-height: calc(30 / 20 * 100%);
-}
-
-@media (max-width: 479px) {
-	.main-block__text {
-		color: #404040;
-	}
 }
 
 .main-block__buttons {
@@ -256,27 +237,6 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	letter-spacing: 0.2px;
 	font-weight: 700;
 	line-height: 150%;
-}
-
-@media (max-width: 574px) {
-	.main-block__buttons {
-		flex-wrap: wrap;
-	}
-	.main-block__button {
-		flex: 1 1 100%;
-		font-weight: 700;
-		font-size: 18px;
-		line-height: 200%;
-	}
-	.main-block__button:not(:last-child) {
-		margin-bottom: 10px;
-	}
-}
-
-@media (min-width: 479px) {
-	.main-block__button:not(:last-child) {
-		margin-right: 10px;
-	}
 }
 
 .block__button-orange {
@@ -308,6 +268,45 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	}
 }
 
+@media (max-width: 479px) {
+	.main-block__title {
+		font-size: 42px;
+	}
+
+	.main-block__text {
+		color: #404040;
+	}
+}
+@media (max-width: 574px) {
+	.main-block__body > *:not(:last-child){
+		margin-bottom: 55px;
+	}
+	.main-block__body {
+		padding: 120px 0 191px 0;
+	}
+}
+
+@media (max-width: 574px) {
+	.main-block__buttons {
+		flex-wrap: wrap;
+	}
+	.main-block__button {
+		flex: 1 1 100%;
+		font-weight: 700;
+		font-size: 18px;
+		line-height: 200%;
+	}
+	.main-block__button:not(:last-child) {
+		margin-bottom: 10px;
+	}
+}
+
+@media (min-width: 479px) {
+	.main-block__button:not(:last-child) {
+		margin-right: 10px;
+	}
+}
+
 /* ====================================Page-sevices==================================== */
 
 .services {
@@ -326,43 +325,6 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 .services__column {
 	padding: 0 15px;
 	flex: 0 1 33.333%;
-}
-
-@media (max-width: 992px) {
-	.services__column {
-		padding: 0 15px;
-		flex: 0 1 50%;
-		margin-bottom: 15px;
-	}
-
-	.services__column:last-child {
-		padding: 0 15px;
-		flex: 1 1 100%;
-	}
-
-	.services__body {
-		justify-content: center;
-	}
-}
-
-@media (max-width: 574px) {
-	.services__column {
-		margin-right: 15px;
-		margin-left: 15px;
-		flex: 1 1 100%;
-	}
-
-	.services__column:first-child{
-		margin-bottom: 15px;
-	}
-
-	.services__body {
-		justify-content: center;
-	}
-
-	.item-service-green {
-		margin-bottom: 15px;
-	}
 }
 
 .services__item {
@@ -406,6 +368,43 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	color: white;
 }
 
+@media (max-width: 992px) {
+	.services__column {
+		padding: 0 15px;
+		flex: 0 1 50%;
+		margin-bottom: 15px;
+	}
+
+	.services__column:last-child {
+		padding: 0 15px;
+		flex: 1 1 100%;
+	}
+
+	.services__body {
+		justify-content: center;
+	}
+}
+
+@media (max-width: 574px) {
+	.services__column {
+		margin-right: 15px;
+		margin-left: 15px;
+		flex: 1 1 100%;
+	}
+
+	.services__column:first-child{
+		margin-bottom: 15px;
+	}
+
+	.services__body {
+		justify-content: center;
+	}
+
+	.item-service-green {
+		margin-bottom: 15px;
+	}
+}
+
 /* ====================================Page-advantages==================================== */
 
 .page__advantages {
@@ -429,27 +428,6 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 .advantages__column {
 	padding: 0 15px;
 	flex: 0 1 25%;
-}
-
-@media (max-width: 1031px) {
-	.advantages__column {
-		padding: 0 15px;
-		flex: 0 1 50%;
-	}
-	.advantages__column:nth-child(odd) {
-		margin-bottom: 15px;
-	}
-}
-
-@media (max-width: 574px) {
-	.advantages__column {
-		padding: 0 15px;
-		flex: 0 1 100%;
-		margin-bottom: 15px;
-	}
-	.advantages__header {
-		margin-bottom: 30px;
-	}
 }
 
 .advantages__item {
@@ -477,6 +455,27 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	color: #737373;
 }
 
+@media (max-width: 1031px) {
+	.advantages__column {
+		padding: 0 15px;
+		flex: 0 1 50%;
+	}
+	.advantages__column:nth-child(odd) {
+		margin-bottom: 15px;
+	}
+}
+
+@media (max-width: 574px) {
+	.advantages__column {
+		padding: 0 15px;
+		flex: 0 1 100%;
+		margin-bottom: 15px;
+	}
+	.advantages__header {
+		margin-bottom: 30px;
+	}
+}
+
 /* ====================================Page-practice==================================== */
 
 .practice {
@@ -496,34 +495,6 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 .practice__column {
 	padding: 0 15px;
 	flex: 0 1 25%;
-}
-
-@media (max-width: 1031px) {
-	.practice__column {
-		padding: 0 15px;
-		flex: 0 1 50%;
-	}
-	.practice__column:nth-child(-n+2) {
-		margin-bottom: 30px;
-	}
-	.practice__header {
-		margin-bottom: 25px;
-	}
-	.practice {
-		padding: 60px 0 40px;
-	}
-}
-
-@media (max-width: 574px) {
-	.practice__column {
-		padding: 0 15px;
-		flex: 0 1 100%;
-		margin-bottom: 15px;
-		text-align: center;
-	}
-	.practice {
-		padding: 40px 0 30px;
-	}
 }
 
 .practice__item {
@@ -562,6 +533,149 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 .item-practice__image {
 	display: block;
 	padding-bottom: 60%;
+}
+
+@media (max-width: 1031px) {
+	.practice__column {
+		padding: 0 15px;
+		flex: 0 1 50%;
+	}
+	.practice__column:nth-child(-n+2) {
+		margin-bottom: 30px;
+	}
+	.practice__header {
+		margin-bottom: 25px;
+	}
+	.practice {
+		padding: 60px 0 40px;
+	}
+}
+
+@media (max-width: 574px) {
+	.practice__column {
+		padding: 0 15px;
+		flex: 0 1 100%;
+		margin-bottom: 15px;
+		text-align: center;
+	}
+	.practice {
+		padding: 40px 0 30px;
+	}
+}
+
+/* ====================================WhoWeAre==================================== */
+
+.whoweare {
+	background-color: #fff;
+	padding: 80px 0 130px 0;
+}
+.whoweare__container {
+}
+.whoweare__header {
+	margin-bottom: 100px;
+}
+.whoweare__body {
+	display: flex;
+}
+
+.whoweare__video {
+	flex: 0 0 57%;
+	position: relative;
+	padding: 0 0 42.25% 0;
+}
+
+.whoweare__video iframe {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	object-fit: cover;
+}
+
+.whoweare__content {
+	flex: 1 1 auto;
+	padding-left: 121px;
+	align-self: center;
+}
+
+.whoweare__title {
+	font-weight: 700;
+	font-size: 40px;
+	line-height: 142.5%;
+}
+
+.whoweare__text {
+	line-height: 143%;
+	color: #737373;
+}
+.whoweare__title:not(:last-child) {
+	margin-bottom: 10px;
+}
+.whoweare__items {
+	margin-top: 50px;
+}
+.whoweare__item {
+}
+.whoweare__item:not(:last-child) {
+	margin-bottom: 30px;
+}
+.item-whoweare {
+	display: flex;
+}
+.item-whoweare__icon {
+	flex: 0 0 32px;
+}
+.item-whoweare__body {
+	flex: 1 1 auto;
+	padding-left: 20px;
+}
+.item-whoweare__title {
+	font-weight: 700;
+	font-size: 16px;
+	letter-spacing: 0.1px;
+	line-height: 150%;
+}
+.item-whoweare__title:not(:last-child) {
+	margin-bottom: 5px;
+}
+.item-whoweare__text {
+	font-weight: 600;
+	color: #737373;
+	line-height: 171%;
+}
+
+@media (max-width: 950px) {
+	.whoweare__title {
+		font-size: 24px;
+	}
+	.whoweare {
+		padding: 50px 0 50px 0;
+	}
+	.whoweare__body {
+		flex-direction: column-reverse;
+	}
+	.whoweare__video {
+		margin-top: 50px;
+	}
+	.whoweare__video {
+		padding: 0 0 56.25% 0;
+	}
+}
+
+@media (max-width: 1030px) {
+	.whoweare__content {
+		padding-left: 80px;
+	}
+	.whoweare__header {
+		margin-bottom: 40px;
+	}
+}
+
+@media (max-width: 574px) {
+	.whoweare__content {
+		padding: 0 15px 0 15px;
+	}
 }
 
 /* ====================================Footer==================================== */
