--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,9 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	font-weight: 600;
 	line-height: calc(24 / 14 * 100%);
 }
+.menu__link:hover {
+	text-decoration: underline;
+}
 
 @media (max-width: 479px) {
 	.menu__link {
@@ -174,6 +177,8 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 .page__subscribe {
 }
 .page__getintouch {
+}
+.page__contact {
 }
 /* ====================================Header-block==================================== */
 
@@ -248,11 +253,22 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 .block__button-orange {
 	background: #FF7B47;
 	color: white;
+	transition: all 0.3s ease 0s;
+}
+.block__button-orange:hover {
+	background: #532816;
+	color: white;
 }
 
 .block__button-border {
 	border: 1px solid #0D5C63;
 	color: #0D5C63;
+	transition: all 0.3s ease 0s;
+}
+.block__button-border:hover {
+	border: 1px solid #0D5C63;
+	background: #0D5C63;
+	color: white;
 }
 
 .main-block__image {
@@ -772,6 +788,10 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	text-align: center;
 	color: white;
 	padding: 20px;
+	transition: all 0.3s ease 0s;
+}
+.subscribe__button:hover {
+	background: #502616;
 }
 
 @media (min-width: 1070px) {
@@ -904,8 +924,207 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	}
 }
 
+/* ====================================CONTACT US==================================== */
+
+.contact {
+	display: block;
+	background-color: #fff;
+}
+.page__container {
+}
+
+.contact__content {
+	padding-right: 20px;
+}
+.contact__title {
+	font-weight: 700;
+	font-size: 24px;
+	line-height: 133%;
+	letter-spacing: 0.1px;
+}
+.contact__text {
+	color: #737373;
+	line-height: 142.8%;
+	padding: 10px 0;
+}
+.contact__button {
+	display: flex;
+	background: #FF7B47;
+	border-radius: 5px;
+	color: white;
+	padding: 15px 40px;
+	font-weight: 700;
+	line-height: 200%;
+	text-align: center;
+	justify-content: center;
+	text-align: center;
+	transition: all 0.3s ease 0s;
+}
+.contact__button:hover {
+	background: #562918;
+}
+.contact__body {
+	margin-bottom: 40px;
+}
+
+@media (min-width: 767px) {
+	.contact__body {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		background-color: #fff;
+		padding: 40px 0;
+	}
+	.contact__text {
+		padding: 10px 0 0 0;
+	}
+}
+@media (max-width: 767px) {
+	.contact__content {
+		text-align: center;
+	}
+	.contact__button {
+		font-size: 18px;
+	}
+}
+
 /* ====================================Footer==================================== */
 
 .footer {
+}
+.footer__top {
+	background: #17213C;
+	padding: 30px 0;
+}
+.footer__main {
+	display: flex;
+	justify-content: center;
+}
+.footer__column {
+	padding: 20px 15px;
+	flex: 0 0 auto;
+}
+.footer__column:not(:last-child) {
+	color: white;
+}
+.footer__column:last-child {
+	flex: 0 1 33.334%;
+	color: white;
+}
+.footer__column:not(:last-child) {
+	margin-right: 20px;
+}
+.footer__label {
+	color: white;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 150%;
+	letter-spacing: 0.1px;
+	margin-bottom: 20px;
+}
+.footer__menu {
+}
 
+
+.menu-footer {
+}
+.menu-footer__list {
+}
+.menu-footer__item {
+	
+}
+.menu-footer__link {
+	color: white;
+	line-height: 171%;
+}
+.menu-footer__link:hover {
+	text-decoration: underline;
+}
+.menu-footer__item:not(:last-child) {
+	margin-bottom: 12px;
+}
+
+
+
+.footer__contact {
+}
+.contact-footer {
+	display: flex;
+	flex-direction: column;
+}
+.contact-footer__item {
+	padding-left: 34px;
+	color: white;
+	font-weight: 600;
+	line-height: 171%;
+}
+.contact-footer__item:hover {
+	text-decoration: underline;
+}
+.contact-footer__item:not(:last-child) {
+	margin-bottom: 10px;
+}
+.contact-footer__item-phone {
+	background: url("../img/footer/01.svg") left no-repeat;
+}
+.contact-footer__item-map {
+	background: url("../img/footer/02.svg") left no-repeat;
+}
+.contact-footer__item-email {
+	background: url("../img/footer/03.svg") left no-repeat;
+}
+
+
+
+.footer__bottom {
+	padding: 25px 0;
+}
+
+
+@media (min-width: 767px) {
+	.footer__container {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+}
+@media (max-width: 992px) {
+	.footer__main {
+		flex-wrap: wrap;
+	}
+}
+
+
+.footer__copy {
+	font-weight: 600;
+	line-height: 171%;
+	color: #737373;
+	padding: 5px 0;
+}
+
+
+.footer__social {
+}
+.social {
+	
+}
+.social__items {
+	display: flex;
+	align-items: center;
+}
+.social__item {
+}
+.social__item:not(:last-child) {
+	margin-right: 20px;
+}
+.footer__container {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+@media (max-width: 767px) {
+	.footer__container {
+		flex-direction: column;
+		align-content: center;
+	}
 }
